# fundamentalsmcp

./: .gitlab-ci.yml  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
skills/company-dossier/: SKILL.md
skills/comps-analysis/: SKILL.md
skills/forensic-deep-dive/: SKILL.md
skills/market-sentiment/: SKILL.md
src/edgar_mcp/: dossier.py  forensic.py  macro.py  market.py  quality.py  server.py  store.py  vector.py
src/fundamentalsmcp/: __init__.py  dossier.py  forensic.py  macro.py  market.py  quality.py  server.py  store.py  taxonomy.py  uk.py  util.py  vector.py
tests/: live_smoke.py
