[project]
name = "fundamentalsmcp"
version = "0.1.0"
description = "Deep, structured MCP access to SEC EDGAR: layered XBRL fact/definition/calc-tree tooling, a queryable DuckDB fact store, global market data (yfinance) and FRED macro, section extraction, full-text search, insider parsing"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["sec", "edgar", "xbrl", "mcp", "finance", "fundamentals", "yfinance", "fred"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "duckdb>=1.5.4",
    "edgartools>=5.40.1",
    "fastembed>=0.8.0",
    "httpx>=0.28.1",
    "lancedb>=0.34.0",
    "mcp>=1.9",
    "yfinance>=1.5.1",
]

[project.scripts]
fundamentalsmcp = "fundamentalsmcp.server:main"
edgar-mcp = "fundamentalsmcp.server:main"  # legacy alias

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = [
    "RUF001",  # em-dashes/× in user-facing strings are deliberate
]
[tool.ruff.lint.per-file-ignores]
# F() is the finding constructor — terse on purpose, used hundreds of times
"src/fundamentalsmcp/forensic.py" = ["N802"]
